[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylightcharts"
version = "0.1.0"
description = "High-performance PySide6 financial charting with live ticks and indicators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
]

[tool.setuptools.packages.find]
where = ["."]
